--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="fabColor">#666666</color>
+    <color name="StatusBarColor">#3c4043</color>
+    <color name="backgroundColor">#35383b</color>
 </resources>
